securitygroup.tf
resource "aws_security_group" "allow-ssh" {
  vpc_id      = "vpc-043574869874c08de"
  name        = "allow-ssh"
  description = "security group that allows ssh and all egress traffic"
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.allow-ssh.id, "sg-07b29d4682a179257"] # allowing access from our example instance
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow-ssh and http",
    Project = "DEMO_Ene20"
  }
}

resource "aws_security_group" "allow-mariadb" {
  vpc_id      = "vpc-043574869874c08de"
  name        = "allow-mariadb"
  description = "allow-mariadb"
  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.allow-ssh.id, "sg-07b29d4682a179257"] # allowing access from our example instance
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    self        = true
  }
  tags = {
    Name = "allow-mariadb",
    Project = "DEMO_Ene20"
  }
}
